BE/error/src/main/java/com/example/demo/config/EnvConfig.java
package com.example.demo.config;

import org.springframework.context.annotation.Configuration;
import org.springframework.context.annotation.PropertySource;
import org.springframework.context.annotation.PropertySources;

@Configuration
@PropertySource("classpath:/.env")
public class EnvConfig {}
